--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta property="og:title" content="Saha's Infinetix - EnterpriseX AI Suite" />
     <meta property="og:description" content="One Suite. Total AI Intelligence. Infinite Possibilities. - EnterpriseX AI Suite by Sahayoheshwaran" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.ico" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@SahasInfinetix" />
     <meta name="twitter:creator" content="@Sahayoheshwaran" />
-    <meta name="twitter:image" content="/favicon.ico" />
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
     <meta name="twitter:title" content="Saha's Infinetix - EnterpriseX AI Suite" />
     <meta name="twitter:description" content="Revolutionary AI platform for enterprise intelligence" />
   </head>
